<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="@dimen/dimen_0_dp"
        android:layout_marginBottom="@dimen/dimen_8_dp"
        android:layout_marginEnd="@dimen/dimen_30_dp"
        android:layout_marginStart="@dimen/dimen_30_dp"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/selltm_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_50_dp"
            android:src="@drawable/selltm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15_dp"
            android:text="@string/string_login_username"
            android:textColor="@color/color_green"
            android:textSize="@dimen/font_14_sp" />

        <EditText
            android:id="@+id/username_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15_dp"
            android:layout_marginEnd="@dimen/dimen_5_dp"
            android:layout_marginStart="@dimen/dimen_5_dp"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_10_dp"
            android:textSize="@dimen/font_18_sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15_dp"
            android:text="@string/string_login_password"
            android:textColor="@color/color_green"
            android:textSize="@dimen/font_14_sp" />

        <EditText
            android:id="@+id/password_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_25_dp"
            android:layout_marginEnd="@dimen/dimen_5_dp"
            android:layout_marginStart="@dimen/dimen_5_dp"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_10_dp"
            android:textSize="@dimen/font_18_sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_10_dp"
            android:background="@color/color_green"
            android:elevation="@dimen/dimen_10_dp"
            android:paddingEnd="@dimen/dimen_50_dp"
            android:paddingStart="@dimen/dimen_50_dp"
            android:text="@string/string_ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_24_sp" />

        <Button
            android:id="@+id/button_reset_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/string_reset_pwd"
            android:textColor="@color/color_reset_pwd"
            android:textSize="@dimen/font_18_sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
