<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/dimen_15_dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/trip_type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_8_dp"
        android:layout_marginBottom="@dimen/dimen_16_dp"
        android:checkedButton="@id/radio_one_way_trip">

        <RadioButton
            android:id="@+id/radio_one_way_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_button_double_circle"
            android:text="@string/string_one_way_trip"
            android:textSize="@dimen/font_18_sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/dimen_10_dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radio_button_double_circle"
            android:text="@string/string_round_trip"
            android:textSize="@dimen/font_18_sp"
            android:textStyle="bold"
            android:paddingStart="@dimen/dimen_10_dp"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_5_dp"
        android:background="@color/color_divider"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pickup_city_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15_dp"
            android:text="@string/string_pickup_city"
            android:textColor="@color/color_font_grey"
            android:textSize="@dimen/font_14_sp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ExpandableListView
            android:id="@+id/pickup_city_expandable_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_15_dp"
            android:layout_marginEnd="@dimen/dimen_20_dp"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@drawable/expandable_listview_bg"
            android:listSelector="@android:color/transparent"
            android:groupIndicator="@null"
            app:layout_constraintTop_toBottomOf="@+id/pickup_city_TV"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@color/color_divider"
            app:layout_constraintTop_toTopOf="@+id/interchange_IV"
            app:layout_constraintBottom_toBottomOf="@+id/interchange_IV"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/interchange_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/interchange"
            android:paddingStart="@dimen/dimen_5_dp"
            android:paddingEnd="@dimen/dimen_5_dp"
            android:layout_marginStart="@dimen/dimen_5_dp"
            android:layout_marginEnd="@dimen/dimen_5_dp"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:layout_marginBottom="@dimen/dimen_15_dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickup_city_expandable_listview" />

        <TextView
            android:id="@+id/drop_city_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15_dp"
            android:text="@string/string_drop_city"
            android:textColor="@color/color_font_grey"
            android:textSize="@dimen/font_14_sp"
            app:layout_constraintTop_toBottomOf="@+id/interchange_IV"
            app:layout_constraintStart_toStartOf="parent"/>

        <ExpandableListView
            android:id="@+id/drop_city_expandable_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_25_dp"
            android:layout_marginEnd="@dimen/dimen_20_dp"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_5_dp"
            android:background="@drawable/expandable_listview_bg"
            android:listSelector="@android:color/transparent"
            android:groupIndicator="@null"
            app:layout_constraintTop_toBottomOf="@+id/drop_city_TV"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:background="@color/color_divider"/>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/date_LL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:layout_marginEnd="@dimen/dimen_5_dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider_LL"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_pickup_date"/>

            <TextView
                android:id="@+id/pickup_date_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/pickup_date_TV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10_dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_LL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_15_dp"
            android:layout_marginStart="@dimen/dimen_5_dp"
            app:layout_constraintStart_toEndOf="@+id/divider_LL"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_pickup_time"/>

            <TextView
                android:id="@+id/pickup_time_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/divider_LL"
            android:layout_width="@dimen/dimen_1_dp"
            android:layout_height="@dimen/dimen_0_dp"
            android:layout_marginStart="@dimen/dimen_5_dp"
            android:layout_marginEnd="@dimen/dimen_5_dp"
            android:background="@color/color_divider"
            app:layout_constraintStart_toEndOf="@id/date_LL"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/time_LL"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:orientation="horizontal"
        android:background="@color/color_divider"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_marginBottom="@dimen/dimen_10_dp"
        android:background="@color/color_green"
        android:elevation="@dimen/dimen_10_dp"
        android:paddingEnd="@dimen/dimen_20_dp"
        android:paddingStart="@dimen/dimen_20_dp"
        android:text="@string/string_search"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/font_24_sp" />

</LinearLayout>
